--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -13,38 +20,560 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "path = \"/Users/mukulagarwal/Desktop/Python_Code/flights_sagemaker_project\"\n",
-    "data = \"Data\"\n",
-    "\n",
-    "def get_data(name):\n",
-    "    file_name = f\"\""
+    "Read_Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "project_dir = \"/Users/mukulagarwal/Desktop/Python_Code/flights_sagemaker_project\"\n",
+    "data_dir = \"Data\"\n",
+    "\n",
+    "def get_data(name):\n",
+    "    file_name = f\"{name}.csv\"\n",
+    "    file_path = os.path.join(project_dir,data_dir,file_name)\n",
+    "    return pd.read_csv(file_path)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Date_of_Journey</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Route</th>\n",
+       "      <th>Dep_Time</th>\n",
+       "      <th>Arrival_Time</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Total_Stops</th>\n",
+       "      <th>Additional_Info</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>24/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>22:20</td>\n",
+       "      <td>01:10 22 Mar</td>\n",
+       "      <td>2h 50m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>3897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>1/05/2019</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → IXR → BBI → BLR</td>\n",
+       "      <td>05:50</td>\n",
+       "      <td>13:15</td>\n",
+       "      <td>7h 25m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jet Airways</td>\n",
+       "      <td>9/06/2019</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>DEL → LKO → BOM → COK</td>\n",
+       "      <td>09:25</td>\n",
+       "      <td>04:25 10 Jun</td>\n",
+       "      <td>19h</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>13882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>12/05/2019</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → NAG → BLR</td>\n",
+       "      <td>18:05</td>\n",
+       "      <td>23:30</td>\n",
+       "      <td>5h 25m</td>\n",
+       "      <td>1 stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>6218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>01/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → NAG → DEL</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>21:35</td>\n",
+       "      <td>4h 45m</td>\n",
+       "      <td>1 stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>13302</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10678</th>\n",
+       "      <td>Air Asia</td>\n",
+       "      <td>9/04/2019</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → BLR</td>\n",
+       "      <td>19:55</td>\n",
+       "      <td>22:25</td>\n",
+       "      <td>2h 30m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>4107</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10679</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>27/04/2019</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → BLR</td>\n",
+       "      <td>20:45</td>\n",
+       "      <td>23:20</td>\n",
+       "      <td>2h 35m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>4145</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10680</th>\n",
+       "      <td>Jet Airways</td>\n",
+       "      <td>27/04/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>08:20</td>\n",
+       "      <td>11:20</td>\n",
+       "      <td>3h</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7229</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10681</th>\n",
+       "      <td>Vistara</td>\n",
+       "      <td>01/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>11:30</td>\n",
+       "      <td>14:10</td>\n",
+       "      <td>2h 40m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>12648</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10682</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>9/05/2019</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>DEL → GOI → BOM → COK</td>\n",
+       "      <td>10:55</td>\n",
+       "      <td>19:15</td>\n",
+       "      <td>8h 20m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>11753</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10683 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           Airline Date_of_Journey    Source Destination  \\\n",
+       "0           IndiGo      24/03/2019  Banglore   New Delhi   \n",
+       "1        Air India       1/05/2019   Kolkata    Banglore   \n",
+       "2      Jet Airways       9/06/2019     Delhi      Cochin   \n",
+       "3           IndiGo      12/05/2019   Kolkata    Banglore   \n",
+       "4           IndiGo      01/03/2019  Banglore   New Delhi   \n",
+       "...            ...             ...       ...         ...   \n",
+       "10678     Air Asia       9/04/2019   Kolkata    Banglore   \n",
+       "10679    Air India      27/04/2019   Kolkata    Banglore   \n",
+       "10680  Jet Airways      27/04/2019  Banglore       Delhi   \n",
+       "10681      Vistara      01/03/2019  Banglore   New Delhi   \n",
+       "10682    Air India       9/05/2019     Delhi      Cochin   \n",
+       "\n",
+       "                       Route Dep_Time  Arrival_Time Duration Total_Stops  \\\n",
+       "0                  BLR → DEL    22:20  01:10 22 Mar   2h 50m    non-stop   \n",
+       "1      CCU → IXR → BBI → BLR    05:50         13:15   7h 25m     2 stops   \n",
+       "2      DEL → LKO → BOM → COK    09:25  04:25 10 Jun      19h     2 stops   \n",
+       "3            CCU → NAG → BLR    18:05         23:30   5h 25m      1 stop   \n",
+       "4            BLR → NAG → DEL    16:50         21:35   4h 45m      1 stop   \n",
+       "...                      ...      ...           ...      ...         ...   \n",
+       "10678              CCU → BLR    19:55         22:25   2h 30m    non-stop   \n",
+       "10679              CCU → BLR    20:45         23:20   2h 35m    non-stop   \n",
+       "10680              BLR → DEL    08:20         11:20       3h    non-stop   \n",
+       "10681              BLR → DEL    11:30         14:10   2h 40m    non-stop   \n",
+       "10682  DEL → GOI → BOM → COK    10:55         19:15   8h 20m     2 stops   \n",
+       "\n",
+       "      Additional_Info  Price  \n",
+       "0             No info   3897  \n",
+       "1             No info   7662  \n",
+       "2             No info  13882  \n",
+       "3             No info   6218  \n",
+       "4             No info  13302  \n",
+       "...               ...    ...  \n",
+       "10678         No info   4107  \n",
+       "10679         No info   4145  \n",
+       "10680         No info   7229  \n",
+       "10681         No info  12648  \n",
+       "10682         No info  11753  \n",
+       "\n",
+       "[10683 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights = get_data(\"flight_price\")\n",
+    "flights"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 10683 entries, 0 to 10682\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column           Non-Null Count  Dtype \n",
+      "---  ------           --------------  ----- \n",
+      " 0   Airline          10683 non-null  object\n",
+      " 1   Date_of_Journey  10683 non-null  object\n",
+      " 2   Source           10683 non-null  object\n",
+      " 3   Destination      10683 non-null  object\n",
+      " 4   Route            10682 non-null  object\n",
+      " 5   Dep_Time         10683 non-null  object\n",
+      " 6   Arrival_Time     10683 non-null  object\n",
+      " 7   Duration         10683 non-null  object\n",
+      " 8   Total_Stops      10682 non-null  object\n",
+      " 9   Additional_Info  10683 non-null  object\n",
+      " 10  Price            10683 non-null  int64 \n",
+      "dtypes: int64(1), object(10)\n",
+      "memory usage: 918.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "flights.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations\n",
+    "- The dataset has 10,683 rows and 11 features\n",
+    "- Columns \"route\" and \"Total_Stops\" has 1 missing value\n",
+    "- Date_of_Journey, Dep_Time and Arrival_Time have object data type should have date_time data type"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Preliminary Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Check for data types`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Date_of_Journey</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Route</th>\n",
+       "      <th>Dep_Time</th>\n",
+       "      <th>Arrival_Time</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Total_Stops</th>\n",
+       "      <th>Additional_Info</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>24/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>22:20</td>\n",
+       "      <td>01:10 22 Mar</td>\n",
+       "      <td>2h 50m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>3897</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>1/05/2019</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → IXR → BBI → BLR</td>\n",
+       "      <td>05:50</td>\n",
+       "      <td>13:15</td>\n",
+       "      <td>7h 25m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Jet Airways</td>\n",
+       "      <td>9/06/2019</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>DEL → LKO → BOM → COK</td>\n",
+       "      <td>09:25</td>\n",
+       "      <td>04:25 10 Jun</td>\n",
+       "      <td>19h</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>13882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>12/05/2019</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → NAG → BLR</td>\n",
+       "      <td>18:05</td>\n",
+       "      <td>23:30</td>\n",
+       "      <td>5h 25m</td>\n",
+       "      <td>1 stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>6218</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>IndiGo</td>\n",
+       "      <td>01/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → NAG → DEL</td>\n",
+       "      <td>16:50</td>\n",
+       "      <td>21:35</td>\n",
+       "      <td>4h 45m</td>\n",
+       "      <td>1 stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>13302</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Airline Date_of_Journey    Source Destination                  Route  \\\n",
+       "0       IndiGo      24/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "1    Air India       1/05/2019   Kolkata    Banglore  CCU → IXR → BBI → BLR   \n",
+       "2  Jet Airways       9/06/2019     Delhi      Cochin  DEL → LKO → BOM → COK   \n",
+       "3       IndiGo      12/05/2019   Kolkata    Banglore        CCU → NAG → BLR   \n",
+       "4       IndiGo      01/03/2019  Banglore   New Delhi        BLR → NAG → DEL   \n",
+       "\n",
+       "  Dep_Time  Arrival_Time Duration Total_Stops Additional_Info  Price  \n",
+       "0    22:20  01:10 22 Mar   2h 50m    non-stop         No info   3897  \n",
+       "1    05:50         13:15   7h 25m     2 stops         No info   7662  \n",
+       "2    09:25  04:25 10 Jun      19h     2 stops         No info  13882  \n",
+       "3    18:05         23:30   5h 25m      1 stop         No info   6218  \n",
+       "4    16:50         21:35   4h 45m      1 stop         No info  13302  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Airline            object\n",
+       "Date_of_Journey    object\n",
+       "Source             object\n",
+       "Destination        object\n",
+       "Route              object\n",
+       "Dep_Time           object\n",
+       "Arrival_Time       object\n",
+       "Duration           object\n",
+       "Total_Stops        object\n",
+       "Additional_Info    object\n",
+       "Price               int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = flights.loc[8,'Date_of_Journey']\n",
+    "print(type(value))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "value = flights.loc[8,'Dep_Time']\n",
+    "print(type(value))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observation\n",
+    "- `Date of Journery` : is object data type, should have been date_time\n",
+    "- `Dep_time` and `Arrival_time` should be changed to Date_Time\n",
+    "- The type of `duration` feature is mixed. It should be integer.\n",
+    "- Also same is the cases with `Total stops` where we have mixed data types. Integer + string formatted as string. We can extract data from this column and convert this to integers "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Check for Duplicates"
+   ]
   },
   {
    "cell_type": "code",
