--- a/Notebooks/data_cleaning.ipynb
+++ b/Notebooks/data_cleaning.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing Libraries"
+    "## Importing Libraries"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Read_Data"
+    "## Read_Data"
    ]
   },
   {
@@ -294,6 +294,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preliminary Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -328,6 +335,37 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Airline            0\n",
+       "Date_of_Journey    0\n",
+       "Source             0\n",
+       "Destination        0\n",
+       "Route              1\n",
+       "Dep_Time           0\n",
+       "Arrival_Time       0\n",
+       "Duration           0\n",
+       "Total_Stops        1\n",
+       "Additional_Info    0\n",
+       "Price              0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights.isnull().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -341,14 +379,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Preliminary Analysis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`Check for data types`"
+    "### Check for data types"
    ]
   },
   {
@@ -572,22 +603,297 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check for Duplicates"
+    "### Check for Duplicates"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "220"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights.duplicated().sum()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Airline</th>\n",
+       "      <th>Date_of_Journey</th>\n",
+       "      <th>Source</th>\n",
+       "      <th>Destination</th>\n",
+       "      <th>Route</th>\n",
+       "      <th>Dep_Time</th>\n",
+       "      <th>Arrival_Time</th>\n",
+       "      <th>Duration</th>\n",
+       "      <th>Total_Stops</th>\n",
+       "      <th>Additional_Info</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6321</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>01/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → BOM → AMD → DEL</td>\n",
+       "      <td>08:50</td>\n",
+       "      <td>23:55 02 Mar</td>\n",
+       "      <td>39h 5m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>17135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9848</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>01/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → BOM → AMD → DEL</td>\n",
+       "      <td>08:50</td>\n",
+       "      <td>23:55 02 Mar</td>\n",
+       "      <td>39h 5m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>17135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>572</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>03/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>21:10</td>\n",
+       "      <td>23:55</td>\n",
+       "      <td>2h 45m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8168</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>03/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>21:10</td>\n",
+       "      <td>23:55</td>\n",
+       "      <td>2h 45m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>7591</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>1/04/2019</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>CCU → DEL → COK → BLR</td>\n",
+       "      <td>10:00</td>\n",
+       "      <td>01:20 02 Apr</td>\n",
+       "      <td>15h 20m</td>\n",
+       "      <td>2 stops</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>10408</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2692</th>\n",
+       "      <td>SpiceJet</td>\n",
+       "      <td>24/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>05:45</td>\n",
+       "      <td>08:35</td>\n",
+       "      <td>2h 50m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No check-in baggage included</td>\n",
+       "      <td>4273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2870</th>\n",
+       "      <td>SpiceJet</td>\n",
+       "      <td>24/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>05:45</td>\n",
+       "      <td>08:35</td>\n",
+       "      <td>2h 50m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No check-in baggage included</td>\n",
+       "      <td>4273</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3711</th>\n",
+       "      <td>SpiceJet</td>\n",
+       "      <td>24/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>20:30</td>\n",
+       "      <td>23:20</td>\n",
+       "      <td>2h 50m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No check-in baggage included</td>\n",
+       "      <td>3873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2634</th>\n",
+       "      <td>Vistara</td>\n",
+       "      <td>24/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>11:30</td>\n",
+       "      <td>14:10</td>\n",
+       "      <td>2h 40m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>5403</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5470</th>\n",
+       "      <td>Vistara</td>\n",
+       "      <td>24/03/2019</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>New Delhi</td>\n",
+       "      <td>BLR → DEL</td>\n",
+       "      <td>11:30</td>\n",
+       "      <td>14:10</td>\n",
+       "      <td>2h 40m</td>\n",
+       "      <td>non-stop</td>\n",
+       "      <td>No info</td>\n",
+       "      <td>5403</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>415 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Airline Date_of_Journey    Source Destination                  Route  \\\n",
+       "6321  Air India      01/03/2019  Banglore   New Delhi  BLR → BOM → AMD → DEL   \n",
+       "9848  Air India      01/03/2019  Banglore   New Delhi  BLR → BOM → AMD → DEL   \n",
+       "572   Air India      03/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "8168  Air India      03/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "1495  Air India       1/04/2019   Kolkata    Banglore  CCU → DEL → COK → BLR   \n",
+       "...         ...             ...       ...         ...                    ...   \n",
+       "2692   SpiceJet      24/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "2870   SpiceJet      24/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "3711   SpiceJet      24/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "2634    Vistara      24/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "5470    Vistara      24/03/2019  Banglore   New Delhi              BLR → DEL   \n",
+       "\n",
+       "     Dep_Time  Arrival_Time Duration Total_Stops  \\\n",
+       "6321    08:50  23:55 02 Mar   39h 5m     2 stops   \n",
+       "9848    08:50  23:55 02 Mar   39h 5m     2 stops   \n",
+       "572     21:10         23:55   2h 45m    non-stop   \n",
+       "8168    21:10         23:55   2h 45m    non-stop   \n",
+       "1495    10:00  01:20 02 Apr  15h 20m     2 stops   \n",
+       "...       ...           ...      ...         ...   \n",
+       "2692    05:45         08:35   2h 50m    non-stop   \n",
+       "2870    05:45         08:35   2h 50m    non-stop   \n",
+       "3711    20:30         23:20   2h 50m    non-stop   \n",
+       "2634    11:30         14:10   2h 40m    non-stop   \n",
+       "5470    11:30         14:10   2h 40m    non-stop   \n",
+       "\n",
+       "                   Additional_Info  Price  \n",
+       "6321                       No info  17135  \n",
+       "9848                       No info  17135  \n",
+       "572                        No info   7591  \n",
+       "8168                       No info   7591  \n",
+       "1495                       No info  10408  \n",
+       "...                            ...    ...  \n",
+       "2692  No check-in baggage included   4273  \n",
+       "2870  No check-in baggage included   4273  \n",
+       "3711  No check-in baggage included   3873  \n",
+       "2634                       No info   5403  \n",
+       "5470                       No info   5403  \n",
+       "\n",
+       "[415 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(\n",
+    "    flights.loc[flights.duplicated(keep=False)].\n",
+    "    sort_values([\"Airline\",\"Date_of_Journey\",\"Source\",\"Destination\"])\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observations\n",
+    "- There are 220 duplicates. These must be removed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detailed Analysis"
+   ]
   },
   {
    "cell_type": "code",
