--- a/Notebooks/eda.ipynb
+++ b/Notebooks/eda.ipynb
@@ -2908,6 +2908,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<h3>duration - IQR Limits:</h3>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lower Limit : -928.75\n",
+      "Upper Limit : 2001.25\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>airline</th>\n",
+       "      <th>date_of_journey</th>\n",
+       "      <th>source</th>\n",
+       "      <th>destination</th>\n",
+       "      <th>dep_time</th>\n",
+       "      <th>arrival_time</th>\n",
+       "      <th>duration</th>\n",
+       "      <th>total_stops</th>\n",
+       "      <th>additional_info</th>\n",
+       "      <th>price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>604</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-03-24</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Banglore</td>\n",
+       "      <td>2024-08-28 12:00:00</td>\n",
+       "      <td>2024-08-28 23:15:00</td>\n",
+       "      <td>2115</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>No Info</td>\n",
+       "      <td>14221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>437</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-09-04</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>2024-08-28 05:55:00</td>\n",
+       "      <td>2024-08-28 19:15:00</td>\n",
+       "      <td>2240</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No Info</td>\n",
+       "      <td>7711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>387</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-06-24</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>2024-08-28 05:15:00</td>\n",
+       "      <td>2024-08-28 19:15:00</td>\n",
+       "      <td>2280</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>No Info</td>\n",
+       "      <td>10493</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-06-06</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>2024-08-28 05:00:00</td>\n",
+       "      <td>2024-08-28 19:15:00</td>\n",
+       "      <td>2295</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No Info</td>\n",
+       "      <td>9653</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>582</th>\n",
+       "      <td>Air India</td>\n",
+       "      <td>2019-09-05</td>\n",
+       "      <td>Delhi</td>\n",
+       "      <td>Cochin</td>\n",
+       "      <td>2024-08-28 05:00:00</td>\n",
+       "      <td>2024-08-28 19:15:00</td>\n",
+       "      <td>2295</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>No Info</td>\n",
+       "      <td>9653</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       airline date_of_journey   source destination            dep_time  \\\n",
+       "604  Air India      2019-03-24  Kolkata    Banglore 2024-08-28 12:00:00   \n",
+       "437  Air India      2019-09-04    Delhi      Cochin 2024-08-28 05:55:00   \n",
+       "387  Air India      2019-06-24    Delhi      Cochin 2024-08-28 05:15:00   \n",
+       "244  Air India      2019-06-06    Delhi      Cochin 2024-08-28 05:00:00   \n",
+       "582  Air India      2019-09-05    Delhi      Cochin 2024-08-28 05:00:00   \n",
+       "\n",
+       "           arrival_time  duration  total_stops additional_info  price  \n",
+       "604 2024-08-28 23:15:00      2115          3.0         No Info  14221  \n",
+       "437 2024-08-28 19:15:00      2240          2.0         No Info   7711  \n",
+       "387 2024-08-28 19:15:00      2280          3.0         No Info  10493  \n",
+       "244 2024-08-28 19:15:00      2295          2.0         No Info   9653  \n",
+       "582 2024-08-28 19:15:00      2295          2.0         No Info   9653  "
+      ]
+     },
+     "execution_count": 244,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "eda_helper_functions.get_iqr_outliers(train,\"duration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 78,
    "metadata": {},
    "outputs": [
